add_subdirectory(common)
add_subdirectory(01_window)
add_subdirectory(02_vao)
add_subdirectory(03_indices)
#add_subdirectory(04_shaders) // shader theory, no code
add_subdirectory(05_colouring)
add_subdirectory(06_texturing)
add_subdirectory(07_uniforms)
add_subdirectory(08_mvp)
#add_subdirectory(09_obj // .obj loader theory, no code
add_subdirectory(10_models)
add_subdirectory(11_diffuse_lighting)
add_subdirectory(12_specular_lighting)
add_subdirectory(13_optimising)

# Trying new things
add_subdirectory(dev)