add_subdirectory(common)
add_subdirectory(01_window)
add_subdirectory(02_vao)
add_subdirectory(03_indices)
#add_subdirectory(04_shaders) // shader theory, no code
add_subdirectory(05_colouring)
add_subdirectory(06_texturing)
add_subdirectory(07_uniforms)
add_subdirectory(08_mvp)
#add_subdirectory(09_obj // .obj loader theory, no code
add_subdirectory(10_models)
add_subdirectory(11_diffuse_lighting)
add_subdirectory(12_specular_lighting)
add_subdirectory(13_optimising)
add_subdirectory(14_terrain)
add_subdirectory(15_transparency)
add_subdirectory(16_fog)
add_subdirectory(17_multi_texturing)
add_subdirectory(18_player)
add_subdirectory(19_third_person)
add_subdirectory(20_mipmapping)
add_subdirectory(21_terrain_height_map)
add_subdirectory(22_terrain_collision)
add_subdirectory(23_texture_atlas)
add_subdirectory(24_guis)
add_subdirectory(25_multi_lights)
add_subdirectory(26_point_lights)
add_subdirectory(27_skybox)
add_subdirectory(28_day_night)
add_subdirectory(29_mouse_picking)
add_subdirectory(30_cel_shading)

# Water sub-series
add_subdirectory(water)

# Trying new things
add_subdirectory(dev)